# MultiMC5

./: .gitignore  .travis.yml  CMakeLists.txt  MultiMC.cpp  MultiMC.h  biicode.conf  main.cpp
application/: CMakeLists.txt  InstancePageProvider.h  MainWindow.cpp  MainWindow.h  MultiMC.cpp  VersionProxyModel.cpp  main.cpp
application/dialogs/: ExportInstanceDialog.cpp  VersionSelectDialog.cpp
application/pages/: LegacyJarModPage.cpp  LogPage.cpp  LogPage.h  ModFolderPage.cpp  OtherLogsPage.cpp  ScreenshotsPage.cpp  VersionPage.cpp
bii/: layout.bii  policies.bii
gui/: ConsoleWindow.cpp  ConsoleWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QuickModGuiUtil.h
gui/dialogs/: AboutDialog.cpp  QMLDialog.cpp  QMLDialog.h  TechnicDialog.cpp  TechnicDialog.h
gui/pages/: InstanceSettingsPage.h  LogPage.h  ModFolderPage.cpp  OtherLogsPage.cpp  OtherLogsPage.h  PackagesPage.cpp  PackagesPage.ui  QuickModBrowsePage.cpp  ScreenshotsPage.cpp  ScreenshotsPage.h  VersionPage.cpp  VersionPage.h
logic/: BaseInstance.cpp  BaseInstance.h  BaseLauncher.cpp  BaseProcess.cpp  BaseProcess.h  CMakeLists.txt  FileSystem.cpp  FileSystem.h  InstanceFactory.cpp  InstanceFactory.h  InstanceList.cpp  InstanceList.h  Json.cpp  LegacyInstance.cpp  LegacyInstance.h  LegacyUpdate.cpp  LegacyUpdate.h  LoggedProcess.cpp  LoggedProcess.h  MMCZip.cpp  MessageLevel.cpp  MinecraftProcess.cpp  MinecraftProcess.h  OneSixInstance.cpp  OneSixInstance.h  OneSixUpdate.cpp  OneSixUpdate.h
logic/assets/: AssetsUtils.cpp  AssetsUtils.h
logic/auth/: MojangAccountList.cpp
logic/forge/: ForgeInstaller.cpp  ForgeInstaller.h  ForgeXzDownload.cpp
logic/ftb/: FTBPlugin.cpp  FTBProfileStrategy.cpp  OneSixFTBInstance.cpp
logic/icons/: IconList.cpp
logic/java/: JavaChecker.cpp  JavaCheckerJob.cpp  JavaUtils.cpp  JavaUtils.h
logic/liteloader/: LiteLoaderInstaller.cpp
logic/minecraft/: AssetsUtils.cpp  LegacyInstance.cpp  LegacyUpdate.cpp  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLauncher.cpp  MinecraftLauncher.h  MinecraftProcess.cpp  MinecraftProfile.cpp  MinecraftProfile.h  MinecraftVersion.h  MinecraftVersionList.cpp  MinecraftVersionList.h  Mod.cpp  ModList.cpp  OneSixInstance.cpp  OneSixLibrary.cpp  OneSixProfileStrategy.cpp  OneSixUpdate.cpp  OneSixUpdate.h  RawLibrary.cpp  VersionBuilder.cpp  VersionBuilder.h  VersionFile.cpp
logic/net/: CacheDownload.cpp  HttpMetaCache.cpp  HttpMetaCache.h  MD5EtagDownload.cpp  NetJob.cpp
logic/quickmod/: InstancePackage.cpp  InstancePackage.h  InstancePackageList.cpp  InstancePackageList.h  InstancePackageModel.cpp  QuickModBuilder.cpp  QuickModBuilder.h  QuickModDatabase.cpp  QuickModDatabase.h  QuickModDependencyResolver.h  QuickModImagesLoader.cpp  QuickModImagesLoader.h  QuickModIndexModel.cpp  QuickModIndexModel.h  QuickModMetadata.cpp  QuickModMetadata.h  QuickModVersion.cpp  QuickModVersion.h  QuickModVersionModel.cpp  QuickModVersionRef.cpp  QuickModVersionRef.h  Transaction.h
logic/settings/: CensorProfile.cpp  CensorProfile.h  CensorSettings.cpp  CensorSettings.h
logic/technic/: ImageProvider.cpp  ImageProvider.h  LegacyPackInfo.h  PackModel.cpp  PackModel.h  SolderInstance.cpp  SolderInstance.h  SolderUpdate.cpp  (+5 more)
tests/: CMakeLists.txt  TestUtil.h  test_config.h.in  tst_DownloadTask.cpp  tst_QuickMod.cpp  tst_QuickModSettings.cpp
(+27 files in other folders)
